<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BeaconFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Start"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:orientation="vertical"
        android:layout_marginRight="20dp">
        <TextView
            android:id="@+id/home_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_of_detected_beacon"
            android:layout_marginTop="20dp"
            android:textSize="25sp"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/number_of_beacon"
                />

            <TextView
                android:id="@+id/number_of_beacon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/colorRed"
                android:text="@string/_0"
                android:layout_marginStart="10dp" />
        </LinearLayout>

        <ListView
            android:id="@+id/beacon_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />


    </LinearLayout>

    <Button
        android:id="@+id/Start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="60dp"
        android:background="@drawable/button"
        android:text="@string/start"
        android:textAllCaps="false"
        android:textColor="#62bcfa"
        android:textSize="20sp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="60dp" />

    <Button
        android:id="@+id/Stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/Start"
        android:layout_marginEnd="60dp"
        android:background="@drawable/button"
        android:text="@string/stop"
        android:textAllCaps="false"
        android:textColor="#62bcfa"
        android:textSize="20sp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="61dp" />

</RelativeLayout>