<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nestedScrollView"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/gradient">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Here you can put your logo or brand name -->

            <ImageView
                android:layout_width="260dp"
                android:layout_height="160dp"
                android:layout_gravity="center_horizontal"
                android:padding="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/group_icon"
                android:contentDescription="@string/todo" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutName"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/ic_person_white_24dp"
                    android:drawablePadding="12dp"
                    android:ems="10"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="#fff"
                    android:textColorHint="#fff"
                    android:drawableStart="@drawable/ic_person_white_24dp" />

            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutPassword"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etUserPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:drawablePadding="12dp"
                    android:padding="8dp"
                    android:textColor="#fff"
                    android:hint="@string/password"
                    android:textColorHint="#fff"
                    android:maxLines="1"
                    android:background="@android:color/transparent"
                    android:layout_marginTop="20dp"
                    android:drawableLeft="@drawable/ic_lock_white_24dp"
                    android:drawableStart="@drawable/ic_lock_white_24dp" />

            </android.support.design.widget.TextInputLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />

            <CheckBox
                android:id="@+id/remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="#fff"
                android:text="Remeber me "
                android:padding="8dp"/>

            <Button
                android:id="@+id/appLogin"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_login"
                android:clickable="true"
                android:focusable="true"
                android:padding="12dp"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textColor="#f16f7d"
                android:textSize="18sp" />

            <Button
                android:id="@+id/appSignUp"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_signup"
                android:clickable="true"
                android:focusable="true"
                android:padding="12dp"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/etForget"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:padding="16dp"
                android:text="@string/forget_your_password"
                android:textColor="#fff"
                android:focusable="true" />


        </LinearLayout>
    </ScrollView>


</android.support.v4.widget.NestedScrollView>