<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/SignUpMain"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/gradient">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/nameLayout"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="200dp"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/ic_person_white_24dp"
                    android:drawablePadding="12dp"
                    android:ems="10"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="#fff"
                    android:textColorHint="#fff"
                    android:drawableStart="@drawable/ic_person_white_24dp" />
            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/emailLayout"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/ic_mail"
                    android:drawablePadding="12dp"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="#fff"
                    android:textColorHint="#fff"
                    android:drawableStart="@drawable/ic_mail" />

            </android.support.design.widget.TextInputLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/pass1Layout"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:drawablePadding="12dp"
                    android:padding="8dp"
                    android:textColor="#fff"
                    android:hint="@string/password"
                    android:textColorHint="#fff"
                    android:maxLines="1"
                    android:background="@android:color/transparent"
                    android:layout_marginTop="20dp"
                    android:drawableLeft="@drawable/ic_lock_white_24dp"
                    android:drawableStart="@drawable/ic_lock_white_24dp" />

            </android.support.design.widget.TextInputLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/pass2Layout"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etPassword_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:drawablePadding="12dp"
                    android:padding="8dp"
                    android:textColor="#fff"
                    android:hint="@string/confirm_password"
                    android:textColorHint="#fff"
                    android:maxLines="1"
                    android:background="@android:color/transparent"
                    android:layout_marginTop="20dp"
                    android:drawableLeft="@drawable/ic_lock_white_24dp"
                    android:drawableStart="@drawable/ic_lock_white_24dp" />

            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />


            <Button
                android:id="@+id/etRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_signup"
                android:text="@string/register_now"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:textColor="#fff"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:layout_marginTop="36dp"
                android:clickable="true"
                android:padding="12dp"
                android:focusable="true" />

            <TextView
                android:id="@+id/BackLogin"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:layout_marginBottom="16dp"
                android:layout_gravity="center_horizontal"
                android:clickable="true"
                android:padding="16dp"
                android:text="@string/already_have_account_log_in"
                android:textColor="#fff"
                android:focusable="true" />





        </LinearLayout>


    </ScrollView>

</android.support.v4.widget.NestedScrollView>