<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/forget_view"
    android:background="@drawable/gradient"
    tools:context=".ForgetActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/ttt11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginTop="153dp"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="15sp"
                android:layout_alignParentStart="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pls_enter"
                    android:textColor="#fff"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="17sp"
                    android:layout_marginRight="17sp"
                    android:textSize="18sp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/for1"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/forget_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:background="@android:color/transparent"
                        android:drawableLeft="@drawable/ic_email"
                        android:drawablePadding="12dp"
                        android:drawableStart="@drawable/ic_email"
                        android:ems="10"
                        android:hint="@string/enter_your_register_email"
                        android:inputType="text"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:textColor="#fff"
                        android:textColorHint="#fff" />
                </android.support.design.widget.TextInputLayout>

                <View
                    android:layout_width="300sp"
                    android:layout_height="1dp"
                    android:background="#f9d7db" />

            </LinearLayout>

            <Button
                android:id="@+id/asend_pass"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"
                android:background="@drawable/background_login"
                android:clickable="true"
                android:focusable="true"
                android:padding="12dp"
                android:text="@string/send_password"
                android:textAllCaps="false"
                android:textColor="#f16f7d"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/back_login"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_gravity="center_horizontal"
                android:clickable="true"
                android:focusable="true"
                android:text="Back to Log in"
                android:textColor="#fff"
                android:textSize="17sp" />

        </LinearLayout>
    </ScrollView>

</android.support.v4.widget.NestedScrollView>